crates/deadline-cli/tests/cli/snapshots/cli__common__version_prints_name_and_semver.snap
---
source: crates/deadline-cli/tests/cli/common.rs
info:
  program: deadline
  args:
    - "--version"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:58888"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:58888"
    AWS_ENDPOINT_URL_S3: "http://localhost:58888"
    AWS_ENDPOINT_URL_STS: "http://localhost:58888"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpTndwFi/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpTndwFi
---
success: true
exit_code: 0
----- stdout -----
deadline, version 0.1.0

----- stderr -----
